--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -149,23 +149,23 @@
 
 @font-face {
   font-family: '霞鹜文楷';
-  src: url('./fonts/LXGWWenKai-Regular.ttf') format('truetype');
+  src: url('/fonts/LXGWWenKai-Regular.ttf') format('truetype');
 }
 @font-face {
   font-family: '霞鹜文楷-等宽';
-  src: url('./fonts/LXGWWenKaiMono-Regular.ttf') format('truetype');
+  src: url('/fonts/LXGWWenKaiMono-Regular.ttf') format('truetype');
 }
 @font-face {
   font-family: '霞鹜新晰黑';
-  src: url('./fonts/LXGWNeoXiHei.ttf') format('truetype');
+  src: url('/fonts/LXGWNeoXiHei.ttf') format('truetype');
 }
 @font-face {
   font-family: '霞鹜新晰黑-等宽';
-  src: url('./fonts/NeoXiHeiCode-Regular.ttf') format('truetype');
+  src: url('/fonts/NeoXiHeiCode-Regular.ttf') format('truetype');
 }
 @font-face {
   font-family: '更纱黑体';
-  src: url('./fonts/SarasaUiCL-Regular.ttf') format('truetype');
+  src: url('/fonts/SarasaUiCL-Regular.ttf') format('truetype');
 }
 @font-face {
   font-family: '思源宋体';
