--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -139,12 +139,17 @@
 
 /* 英雄区图片背景渐变的调整 */
 .image-bg {
-  margin-top: 14% !important;
+  margin-top: 5% !important;
+}
+/* .main {
+  margin-top: 8% !important; //只改文字
+} */
+html {
+  scroll-behavior: smooth;
 }
 
-
-.main {
-  margin-top: 8% !important;
+.VPHero {
+  margin-top: 2% !important;
 }
 
 @font-face {
@@ -175,3 +180,5 @@
 --vp-font-family-base: var(--main-font, '霞鹜文楷');/* normal text font */
 --vp-font-family-mono: "霞鹜文楷-等宽";/* code font */
 }
+
+
