--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -152,33 +152,9 @@ html {
   margin-top: 2% !important;
 }
 
-@font-face {
-  font-family: '霞鹜文楷';
-  src: url('/fonts/LXGWWenKai-Regular.ttf') format('truetype');
-}
-@font-face {
-  font-family: '霞鹜文楷-等宽';
-  src: url('/fonts/LXGWWenKaiMono-Regular.ttf') format('truetype');
-}
-@font-face {
-  font-family: '霞鹜新晰黑';
-  src: url('/fonts/LXGWNeoXiHei.ttf') format('truetype');
-}
-@font-face {
-  font-family: '霞鹜新晰黑-等宽';
-  src: url('/fonts/NeoXiHeiCode-Regular.ttf') format('truetype');
-}
-@font-face {
-  font-family: '更纱黑体';
-  src: url('/fonts/SarasaUiCL-Regular.ttf') format('truetype');
-}
-@font-face {
-  font-family: '思源宋体';
-  src: url('./fonts/SourceHanSerifCN-Regular.otf') format('truetype');
-}
-:root {
---vp-font-family-base: var(--main-font, '霞鹜文楷');/* normal text font */
---vp-font-family-mono: "霞鹜文楷-等宽";/* code font */
-}
+/* :root {
+--vp-font-family-base: var(--main-font, '霞鹜文楷');/* normal text font
+--vp-font-family-mono: "霞鹜文楷-等宽";/* code font
+} */
 
 
